[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/GUISubComponents/MerchantItem.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/grey4.png" type="Texture" id=2]
[ext_resource path="res://textures/Items/item_sheet.png" type="Texture" id=3]
[ext_resource path="res://fonts/Exo2-Regular.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[node name="ListItem" type="MarginContainer"]
margin_right = 603.0
margin_bottom = 78.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 603.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 603.0
margin_bottom = 78.0

[node name="IconContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 78.0
custom_constants/margin_left = 48

[node name="Sprite" type="Sprite" parent="HBoxContainer/IconContainer"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 16, 16 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="ItemName" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 603.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
text = "Item Name"
scroll_active = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 603.0
margin_bottom = 78.0
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
